@@ -1,3 +1,5 @@
+HEAD
+	+ EBox::CA::checkCertificateFieldsCharacters is now a public method
 4.0
 	+ Protect openchange certificate for manipulation which could rend
 	  it invalid
